Refactoring of AI classes and methods Algorithm to clean up HB clusters provided by AI